# sector-flow-tick-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.mjs
.github/workflows/: release.yml
docs/: index.html
electron/: collector.cjs  config.cjs  defaults.cjs  eastmoney.cjs  main.cjs  preload.cjs
scripts/: dev.mjs
src/: api.ts  main.tsx  preload.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: collector.rs  config.rs  eastmoney.rs  lib.rs  models.rs  sector_store.rs
src/ui/: App.tsx  SectorSelectorModal.tsx  TrendChart.tsx
